fix: z-index

--- a/text-chat/src/App.css
+++ b/text-chat/src/App.css
@@ -39,6 +39,7 @@
   transform: translate(-50%, -50%);
 }
 .fon {
+  z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
